# zk_he

./: Cargo.toml  README.md
.github/workflows/: bench.yml  rust.yml
crates/homomorphic/: Cargo.toml
crates/homomorphic/benches/: benchmarks.rs
crates/homomorphic/src/: lib.rs  tfhe.rs  tfhe_bool.rs  tfhe_string.rs
crates/symmetric/: Cargo.toml
crates/symmetric/benches/: benchmarks.rs
crates/symmetric/src/: aes.rs  camellia.rs  chacha.rs  lib.rs
crates/transciphering/: Cargo.toml  README.md
crates/transciphering/benches/: benchmarks.rs
crates/transciphering/src/: chacha.rs  lib.rs
crates/zk/: Cargo.toml
crates/zk/benches/: benchmarks.rs
crates/zk/src/: groth.rs  lib.rs  plonk.rs  zk.rs
examples/tranciphering/: Cargo.toml
examples/tranciphering/src/: client.rs  main.rs  server.rs
web_client/: README.md
web_client/client/: package-lock.json  package.json
web_client/client/key/: Cargo.toml
web_client/client/key/src/: lib.rs
web_client/client/pkg/: key.d.ts  key.js  key_bg.wasm  key_bg.wasm.d.ts  package.json
web_client/client/src/: App.tsx  index.css
web_client/client/src/components/: Layout.tsx  Navbar.tsx
web_client/client/src/pages/: AllVotes.tsx  CreateVote.tsx  ElectionDetails.tsx  GetToken.tsx  Home.tsx
web_client/client/src/utils/: wasmKeys.ts
web_client/server/: .gitignore  Cargo.toml
web_client/server/src/: db.rs  main.rs  models.rs
web_client/server/src/routes/: auth.rs  ballot.rs  election.rs  key.rs  mod.rs
web_client/server/vote_db/: IDENTITY  LOG  MANIFEST-000005
