[package]
name = "homomorphic"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
tfhe = { workspace = true, features = [
    "boolean",
    "shortint",
    "integer",
    "strings",
] }
rand.workspace = true
bincode.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
