[package]
name = "zk"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
ark-std.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-bls12-381.workspace = true
plonky2.workspace = true
ark-relations = "0.5.1"
ark-r1cs-std = "0.5.0"
ark-groth16 = "0.5.0"
ark-snark = "0.5.1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
ark-poly = "0.5.0"
ark-poly-commit = "0.5.0"
ark-serialize.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
