[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
bincode.workspace = true
rand.workspace = true
rocksdb = "0.24.0"
serde.workspace = true
serde_json = "1.0.145"
sha2 = "0.10.9"
tfhe.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
homomorphic= {path="../../crates/homomorphic"}
env_logger = "0.11.8"
