[package]
name = "key"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
base64 = "0.21"
bincode = "1.3"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
homomorphic = { path = "../../../crates/homomorphic" }
